--- a/ConsoleApp1/CSharp.ConsoleApp1.csproj
+++ b/ConsoleApp1/CSharp.ConsoleApp1.csproj
@@ -8,4 +8,8 @@
     <WarningLevel>1</WarningLevel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+  </ItemGroup>
+
 </Project>
