--- a/WebApi1/appsettings.json
+++ b/WebApi1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Northwind": "Data Source=hostdb-eoi.database.windows.net;Initial Catalog=Northwind;Integrated Security=False;User ID=Administrador;Password=azurePa$$w0rd;Connect Timeout=60"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
